--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@headlessui/react": "^1.0.0",
     "@heroicons/react": "^1.0.1",
+    "classnames": "^2.3.1",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
