--- a/package.json
+++ b/package.json
@@ -12,10 +12,7 @@
     "lint": "eslint . --ext ts --ext tsx --ext js",
     "test": "jest",
     "test-all": "yarn lint && yarn type-check && yarn test",
-    "i18n:extract": "formatjs extract '{pages,components,fixtures}/**/*.tsx' --out-file locales/raws/en_US.json --id-interpolation-pattern [sha512:contenthash:base64:6] --format lokalise",
-    "i18n:compile:en-US": "formatjs compile locales/raws/en_US.json --ast --out-file locales/en-US.json --format lokalise",
-    "i18n:compile:zh-CN": "formatjs compile locales/raws/zh_CN.json --ast --out-file locales/zh-CN.json --format lokalise",
-    "i18n:compile": "npm run i18n:compile:en-US && npm run i18n:compile:zh-CN"
+    "i18n:extract": "formatjs extract '{pages,components,fixtures}/**/*.tsx' --out-file locales/raws/en_US.json --id-interpolation-pattern [sha512:contenthash:base64:6] --format lokalise"
   },
   "husky": {
     "hooks": {
