Update package info

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "with-typescript-eslint-jest",
-  "author": "@amagiddmxh",
+  "name": "with-sb-ts-formatjs-lint",
+  "author": "AmagiDDmxh",
   "license": "MIT",
   "version": "1.0.0",
   "scripts": {
