--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,10 @@
     "paths": {
       "@components/*": ["components/*"],
       "@locales": ["locales/index.ts"],
-      "@locales/*": ["locales/*"]
+      "@locales/*": ["locales/*"],
+      "@libs/*": ["libs/*"],
+      "@hooks": ["libs/hooks/index.ts"],
+      "@hooks/*": ["libs/hooks/*"],
     }
   },
   "exclude": ["node_modules", ".next", "out"],
