Add changes after format on husky commit hook

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "lint-staged": {
     "*.@(ts|tsx)": [
       "yarn lint",
-      "yarn format"
+      "yarn format",
+      "git add"
     ]
   },
   "dependencies": {
