--- a/package.json
+++ b/package.json
@@ -30,13 +30,16 @@
     ]
   },
   "dependencies": {
+    "@ethersproject/experimental": "^5.6.0",
     "@headlessui/react": "^1.0.0",
     "@heroicons/react": "^1.0.1",
+    "@web3-onboard/core": "^2.2.3",
     "classnames": "^2.3.1",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-intl": "^5.20.1"
+    "react-intl": "^5.20.1",
+    "wagmi": "^0.2.28"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
@@ -55,6 +58,7 @@
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "eslint": "^7.19.0",
+    "eslint-config-next": "^12.0.10",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-react": "^7.19.0",
     "husky": "^4.2.3",
