--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -19,36 +15,15 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "paths": {
-      "@components/*": [
-        "components/*"
-      ],
-      "@locales": [
-        "locales/index.ts"
-      ],
-      "@locales/*": [
-        "locales/*"
-      ],
-      "@libs/*": [
-        "libs/*"
-      ],
-      "@hooks": [
-        "libs/hooks/index.ts"
-      ],
-      "@hooks/*": [
-        "libs/hooks/*"
-      ]
+      "@components/*": ["components/*"],
+      "@locales": ["locales/index.ts"],
+      "@locales/*": ["locales/*"],
+      "@libs/*": ["libs/*"],
+      "@hooks": ["libs/hooks/index.ts"],
+      "@hooks/*": ["libs/hooks/*"]
     },
     "incremental": true
   },
-  "exclude": [
-    "node_modules",
-    ".next",
-    "out"
-  ],
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "**/*.js"
-  ]
+  "exclude": ["node_modules", ".next", "out"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.js"]
 }
